<resources>
    <string name="app_name">YesNoQuiz</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="reset">Reset</string>
    <string name="question_handstand">Can you do a handstand?</string>
    <string name="question_space">Would you like to go to space?</string>
    <string name="result">Result</string>
    <string name="results">Results</string>
    <string name="continue_survey">Continue survey</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vote">Vote</string>
    <string name="yes_vote_tally">Yes: %1$s</string>
    <string name="no_vote_tally">No: %1$s</string>
</resources>